--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run serve"
   },
   "dependencies": {
+    "@capacitor/android": "5.7.4",
+    "@capacitor/app": "5.0.7",
+    "@capacitor/cli": "5.7.4",
+    "@capacitor/core": "5.7.4",
+    "@capacitor/haptics": "5.0.7",
+    "@capacitor/keyboard": "5.0.8",
+    "@capacitor/status-bar": "5.0.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
